@@ -1,1 +1,3 @@
+#pragma once
+
 extern void get_basic_balance_motor_speed(int16_t *, float, float, int16_t, int16_t);
