@@ -1,1 +1,3 @@
+#pragma once
+
 extern void get_pot_motor_speed(int16_t * motor_accel, float angle, float angle_old, int16_t m1, int16_t m2);
