@@ -1,3 +1,6 @@
+Dev - 09/01/16
+* changed speed period formula to (y=-0.017x+10.5)
+* changed timer1 implementation to use arduino constants instead of lib - runs 33khz
 * added prints with tag functionality
 * added runEvery macro to simplify debug information
 * changed all the debug information to use the new macro
